refine search scoring, propagate config type to entries, fix tooltip clipping